--- a/site/templates/home.html
+++ b/site/templates/home.html
@@ -2,11 +2,11 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
-		<title>Robert Barg</title>
+		<title>Barg.ly</title>
 	</head>
 	<body>
 		<div>
-			<h1>Robert Barg</h1>
+			<h1>Robert Barg.ly</h1>
 			<div class="content">
 				<p>Actuary, right angle aficionado, and author of the Rold Gold riddle.</p>
 			</div>
