--- a/site/templates/home.html
+++ b/site/templates/home.html
@@ -2,13 +2,13 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
-		<title>Barg.ly</title>
+		<title>Trollbert</title>
 	</head>
 	<body>
 		<div>
-			<h1>Robert Barg.ly</h1>
+			<h1>Trollbert strikes again!</h1>
 			<div class="content">
-				<p>Actuary, right angle aficionado, and author of the Rold Gold riddle.</p>
+				<p>You have been trolled by Barg. Please decrease the sincerity in your comment and try again.</p>
 			</div>
 		</div>
 	</body>
