--- a/site/templates/home.html
+++ b/site/templates/home.html
@@ -7,6 +7,7 @@
 	<body>
 		<div>
 			<h1>Trollbert strikes again!</h1>
+			<img src='troll.jpg' alt='troll' width='300' height='500'>
 			<div class="content">
 				<p>You have been trolled by Barg. Please decrease the sincerity in your comment and try again.</p>
 			</div>
