--- a/site/static/main.css
+++ b/site/static/main.css
@@ -10,7 +10,7 @@ h1 {
   margin-bottom: 30px;
   font-family: Averta, sans-serif;
   color: #fff;
-  font-size: 56px;
+  font-size: 54px;
   line-height: 44px;
   font-weight: 700;
 }
@@ -20,10 +20,17 @@ p {
   margin-bottom: 20px;
   font-family: Averta, sans-serif;
   color: #fff;
-  font-size: 22px;
+  font-size: 14px;
   line-height: 30px;
 }
 
+
+label {
+  font-family: Averta, sans-serif;
+  color: #fff;
+  font-size: 20px;
+}
+
 .content {
-  margin-top: 60px;
+  margin-top: 40px;
 }
